mysql版本(增加用户名重复解决问题)
Signed-off-by: 2374455900 <2374455900@qq.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ link_directories(${LINK_DIR})
 link_libraries(mysqlclient)
 
 add_executable(IM_FOR_Linux
-        config/mysql_config.h TimeUtil.cpp TimeUtil.h  DUtil.cpp DUtil.h User.cpp User.h  main.cpp main.h )
+        config/mysql_config.h DUtil.cpp DUtil.h TimeUtil.cpp TimeUtil.h   User.cpp User.h  main.cpp main.h )
 # -L/usr/lib/x86_64-linux-gnu -lmysqlclient
 
 target_link_libraries(IM_FOR_Linux mysqlclient)
